# rust-rime-updater

./: .gitignore  Cargo.toml  LICENSE  index.html  package-lock.json  package.json
.claude/: launch.json
crates/rime-core/: Cargo.toml
crates/rime-core/src/: error.rs  lib.rs
crates/rime-core/src/backup/: manager.rs
crates/rime-core/src/cache/: manager.rs
crates/rime-core/src/download/: manager.rs
crates/rime-core/src/github/: client.rs  types.rs
crates/rime-core/src/models/: backup.rs  config.rs  mod.rs  release.rs  scheme.rs  version.rs
crates/rime-core/src/registry/: mod.rs  wanxiang.rs
crates/rime-core/src/rime/: installer.rs  mod.rs  platform.rs
crates/rime-core/src/update/: engine.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  mod.rs  scheme.rs  settings.rs  update.rs
src/assets/styles/: global.css
src/components/: ConfirmDialog.tsx  Layout.tsx  ProgressBar.tsx  StatusBadge.tsx
src/lib/: tauri.ts  types.ts
src/pages/: BackupManager.tsx  Dashboard.tsx  SchemeSelector.tsx  Settings.tsx
