[package]
name = "rime-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
zip = "2"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
tracing = "0.1"
semver = { version = "1", features = ["serde"] }
futures-util = "0.3"
